[package]
name = "tetris-vulkan"
version = "0.1.0"
authors = ["danknil <bmisa6233@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.19"
vulkano-shaders = "0.19"
vulkano-win = "0.19"
winit = "0.22"
shaderc = "0.6"
